# app/Http/Controllers/UserManagementController.php
@@ -3,8 +3,10 @@
 namespace App\Http\Controllers;
 
 use App\Http\Requests\UserCreateRequest;
+use App\Http\Requests\UserUpdateRequest;
 use App\Http\Utils\ErrorUtil;
 use App\Models\User;
+use DateTime;
 use Exception;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Hash;
@@ -110,11 +112,176 @@ class UserManagementController extends Controller
         return $this->sendError($e,500);
         }
     }
+ /**
+        *
+     * @OA\Put(
+     *      path="/v1.0/users",
+     *      operationId="updateUser",
+     *      tags={"user_management"},
+    *       security={
+     *           {"bearerAuth": {}}
+     *       },
+     *      summary="This method is to update user",
+     *      description="This method is to update user",
+     *
+     *  @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *            required={"id","first_Name","last_Name","email","password","password_confirmation","phone","address_line_1","address_line_2","country","city","postcode","role"},
+     *           @OA\Property(property="id", type="string", format="number",example="1"),
+     *             @OA\Property(property="first_Name", type="string", format="string",example="Rifat"),
+     *            @OA\Property(property="last_Name", type="string", format="string",example="How was this?"),
+     *            @OA\Property(property="email", type="string", format="string",example="How was this?"),
+
+     * *  @OA\Property(property="password", type="boolean", format="boolean",example="1"),
+     *  * *  @OA\Property(property="password_confirmation", type="boolean", format="boolean",example="1"),
+     *  * *  @OA\Property(property="phone", type="boolean", format="boolean",example="1"),
+     *  * *  @OA\Property(property="address_line_1", type="boolean", format="boolean",example="1"),
+     *  * *  @OA\Property(property="address_line_2", type="boolean", format="boolean",example="1"),
+     *  * *  @OA\Property(property="country", type="boolean", format="boolean",example="1"),
+     *  * *  @OA\Property(property="city", type="boolean", format="boolean",example="1"),
+     *  * *  @OA\Property(property="postcode", type="boolean", format="boolean",example="1"),
+     *  *  * *  @OA\Property(property="role", type="boolean", format="boolean",example="customer"),
+     *
+     *         ),
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *       @OA\JsonContent(),
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     * @OA\JsonContent(),
+     *      ),
+     *        @OA\Response(
+     *          response=422,
+     *          description="Unprocesseble Content",
+     *    @OA\JsonContent(),
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden",
+     *   @OA\JsonContent()
+     * ),
+     *  * @OA\Response(
+     *      response=400,
+     *      description="Bad Request",
+     *   *@OA\JsonContent()
+     *   ),
+     * @OA\Response(
+     *      response=404,
+     *      description="not found",
+     *   *@OA\JsonContent()
+     *   )
+     *      )
+     *     )
+     */
+
+    public function updateUser(UserUpdateRequest $request)
+    {
+
+        try{
+
+            $updatableData = $request->validated();
+
+
+            if(!empty($updatableData['password'])) {
+                $updatableData['password'] = Hash::make($updatableData['password']);
+            } else {
+                unset($updatableData['password']);
+            }
+            $updatableData['is_active'] = true;
+            $updatableData['remember_token'] = Str::random(10);
+            $user  =  tap(User::where(["id" => $updatableData["id"]]))->update(collect($updatableData)->only([
+                'first_Name' ,
+                'last_Name',
+                'password',
+                'phone',
+                'address_line_1',
+                'address_line_2',
+                'country',
+                'city',
+                'postcode',
+
+            ])->toArray()
+            )
+                // ->with("somthing")
+
+                ->first();
+
+
+            $user->syncRoles([$updatableData['role']]);
 
 
 
 
+            $user->roles = $user->roles->pluck('name');
 
+
+            return response($user, 201);
+        } catch(Exception $e){
+            error_log($e->getMessage());
+        return $this->sendError($e,500);
+        }
+    }
+
+
+
+   /**
+        *
+     * @OA\Get(
+     *      path="/v1.0/users/{perPage}",
+     *      operationId="getUsers",
+     *      tags={"user_management"},
+    *       security={
+     *           {"bearerAuth": {}}
+     *       },
+     *              @OA\Parameter(
+     *         name="perPage",
+     *         in="path",
+     *         description="perPage",
+     *         required=true,
+     *  example="6"
+     *      ),
+     *      summary="This method is to get user",
+     *      description="This method is to get user",
+     *
+
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *       @OA\JsonContent(),
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     * @OA\JsonContent(),
+     *      ),
+     *        @OA\Response(
+     *          response=422,
+     *          description="Unprocesseble Content",
+     *    @OA\JsonContent(),
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden",
+     *   @OA\JsonContent()
+     * ),
+     *  * @OA\Response(
+     *      response=400,
+     *      description="Bad Request",
+     *   *@OA\JsonContent()
+     *   ),
+     * @OA\Response(
+     *      response=404,
+     *      description="not found",
+     *   *@OA\JsonContent()
+     *   )
+     *      )
+     *     )
+     */
 
     public function getUsers($perPage,Request $request) {
         $usersQuery = User::with("roles")
@@ -130,10 +297,85 @@ class UserManagementController extends Controller
                 $query->orWhere("email", "like", "%" . $term . "%");
                 $query->orWhere("phone", "like", "%" . $term . "%");
             });
-error_log("search......");
+
+        }
+
+        if(!empty($request->start_date) && !empty($request->end_date)) {
+            $startData = new  DateTime($request->start_date);
+            $endData = new  DateTime($request->start_date);
+            $usersQuery = $usersQuery->whereBetween('created_at', [
+                // $startData->format('Y-m-d H:i:s'),
+                // $endData->format('Y-m-d H:i:s')
+                $request->start_date,
+                $request->end_date
+            ]);
+
         }
 
         $users = $usersQuery->orderByDesc("id")->paginate($perPage);
         return response()->json($users, 200);
+    }
+/**
+        *
+     * @OA\Delete(
+     *      path="/v1.0/users/{id}",
+     *      operationId="id",
+     *      tags={"user_management"},
+    *       security={
+     *           {"bearerAuth": {}}
+     *       },
+     *              @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="id",
+     *         required=true,
+     *  example="6"
+     *      ),
+     *      summary="This method is to delete user by id",
+     *      description="This method is to delete user by id",
+     *
+
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *       @OA\JsonContent(),
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     * @OA\JsonContent(),
+     *      ),
+     *        @OA\Response(
+     *          response=422,
+     *          description="Unprocesseble Content",
+     *    @OA\JsonContent(),
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden",
+     *   @OA\JsonContent()
+     * ),
+     *  * @OA\Response(
+     *      response=400,
+     *      description="Bad Request",
+     *   *@OA\JsonContent()
+     *   ),
+     * @OA\Response(
+     *      response=404,
+     *      description="not found",
+     *   *@OA\JsonContent()
+     *   )
+     *      )
+     *     )
+     */
+
+    public function deleteUserById($id,Request $request) {
+
+       User::where([
+        "id" => $id
+       ])
+       ->delete();
+
+        return response()->json(["ok" => true], 200);
     }
 }
